2008-08-28  Esteban Sanchez  <estebans@artica.es>

	* extensions/update_manager.php: Added function to update Update
	Manager settings.

	* extensions/update_manager/load_updatemanager.php: Added user key
	generation function. Update manager free extension do not use a keygen
	binary file.
	
	* extensions/update_manager/main.php: Changes to key generation,
	because free extension do not use keygen.

	* extensions/update_manager/settings.php: Removed configuration of
	keygen and upgrading directory.

	* extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/lib/libupdate_manager_utils.php: Updated to
	latest version of Update Manager.

	* extensions/update_manager/lib/libupdate_manager_client.php: Removed
	debug flag and errors to be less intrusive for the user. Updated to
	latest version of Update Manager.

	* extensions/update_manager/sql/update_manager.sql: Changed default
	settings.

2008-08-28  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* extensions/update_manager.php: Check for an empty variable so it 
	doesn't give a warning

	* extensions/update_manager/lib/libupdate_manager_utils.php,
	libupdate_manager_client.php: Removed referenced variables from
	function calls because it is deprecated in PHP5

2008-08-28  Esteban Sanchez  <estebans@artica.es>

	* include/functions_visual_map.php: Fixed an error when there were no
	elements in the map that cause Javascript failure and nothing works.
	Thanks Jorge for the advice.

2008-08-27  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/status_monitor.php: Moved legend.

	* godmode/menu.php, operation/menu.php: Updated to solve small ugly effects.
	
	* include/styles/op.css, god.css: Updated to solve small ugly effects. 
	god.css needs to be changed to the new "version".

	* install.php: Solved small typos in language. Style correction.

2008-08-25  Sancho lerena <slerena@artica.es>

	* extensions/update_manager: Added update manager client for
	PandoraFMS.
